; ModuleID = '/home/carl/AnghaBench/hiredis/extr_ssl.c_opensslDoLock.c'
source_filename = "/home/carl/AnghaBench/hiredis/extr_ssl.c_opensslDoLock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ossl_locks = common dso_local global i32* null, align 8
@CRYPTO_LOCK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i8*, i32)* @opensslDoLock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @opensslDoLock(i32 %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i32*, i32** @ossl_locks, align 8
  %11 = load i32, i32* %6, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %10, i64 %12
  store i32* %13, i32** %9, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @CRYPTO_LOCK, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %4
  %19 = load i32*, i32** %9, align 8
  %20 = call i32 @sslLockAcquire(i32* %19)
  br label %24

21:                                               ; preds = %4
  %22 = load i32*, i32** %9, align 8
  %23 = call i32 @sslLockRelease(i32* %22)
  br label %24

24:                                               ; preds = %21, %18
  %25 = load i8*, i8** %7, align 8
  %26 = load i32, i32* %8, align 4
  ret void
}

declare dso_local i32 @sslLockAcquire(i32*) #1

declare dso_local i32 @sslLockRelease(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
